--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -16,6 +16,20 @@ Looking to break into ML and I kind of lose track of what I've been doing so I f
 
 ## The Progress
 
+### September 
+
+September proved to be a pretty productive month for me. I managed to achieve the following things 
+
+1. I started reading more papers - I read a total of 4 new papers in September including the [LLama 2 paper](https://dump.ivanleo.com/LLama-2), [Less is more For Instruction (LIMA)](https://dump.ivanleo.com/Less-is-More-For-Alignment), [Anthropic's Constituitional AI paper](https://dump.ivanleo.com/Constituitional-AI---Harmlessness-from-AI-Feedback) and the new paper on the [RWKV architecture](https://dump.ivanleo.com/RWKV-Reinventing-RNNs-For-The-Transformer-Era)
+
+2. I finished up two MOOCs - [Introduction to Statistics by Stanford](https://dump.ivanleo.com/Stanford-Introduction-To-Statistics) and [Zero to Hero](https://dump.ivanleo.com/Zero-To-Hero)
+
+3. I launched a new site to collate all my notes - you can check it out [here](https://dump.ivanleo.com)
+
+4. I started participating in Kaggle competitions 
+
+5. I finally finished up a LLM red-team challenge I called The Chinese Wall. I did a small write up [here](/blog/reinventing_gandalf) which also includes a small writeup on the discord bot that I built to accompany it.
+
 ### August 
 
 - Finished tidying up a [repo](https://github.com/ivanleomk/Zero-To-Hero-notes) with notes that I'd taken down on Karpathy's course. Currently we have part 1,2 and 3 in there.
